# franka-vacuum-gripper

./: .gitignore  CMakeLists.txt  README.md  package.xml
include/franka_vacuum_gripper/: vacuum_gripper_node.hpp
launch/: vacuum_gripper.launch.py
msg/: VacuumGripperState.msg
scripts/: vacuum_gripper_demo.py
src/: vacuum_gripper_node.cpp
srv/: DropOff.srv  Vacuum.srv
